# alstudy

./: .env  1.1-Qwen-情感分析.ipynb  2-Qwen-FunctionCall.ipynb  2.1-Deepseek-小球碰撞.html  3-Qwen-表格提取.ipynb  5.1-二手车价格预测.ipynb  6.1-catboost_二手车价格预测.ipynb  fe_catboost_submit_result.csv  pyproject.toml
10-神经网络基础与Tensorflow实战/: nn_boston_numpy.py
12-Embeddings和向量数据库/: 1-embedding计算.py  2-embedding-faiss-元数据.py  hotel_rec.ipynb  word_seg.py  word_similarity.py  word_to_vec.ipynb
12-Embeddings和向量数据库/Case-ChatPDF-Faiss/: chatpdf-faiss.ipynb  chatpdf-faiss.py
13-RAG技术与应用/: chatpdf-faiss.ipynb  chatpdf-faiss.py  chunk01.py  chunk02_semantic.py  disney_bot.ipynb  disney_bot.py
13-RAG技术与应用/vector_db/: index.pkl
2-DeepSeek使用与Prompt工程/: 2.2-Deepseek-模型下载.ipynb
5-分析式AI基础/: 5.1-二手车价格预测.ipynb  fe_catboost_feature_importance.csv
5-分析式AI基础/catboost_info/: learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/: catboost_training.json
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: used_car_price_predictions.csv  used_car_price_predictions_xgb.csv
