[project]
name = "aistudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "dashscope>=1.23.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "modelscope>=1.27.1",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "vllm>=0.9.1",
    "xgboost>=3.0.2",
]
