[project]
name = "aistudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "catboost>=1.2.8",
    "dashscope>=1.23.5",
    "docx>=0.2.4",
    "faiss-cpu>=1.11.0.post1",
    "flagembedding>=1.3.5",
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jieba>=0.42.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.21",
    "lxml==5.2.2",
    "matplotlib>=3.10.3",
    "modelscope>=1.27.1",
    "numpy==1.26.4",
    "pandas>=2.3.0",
    "pymupdf>=1.26.3",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "vllm>=0.9.1",
    "wordcloud>=1.9.4",
    "xgboost>=3.0.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
